feat: add TemplateFieldValue and TemplateStepValue entities; update TicketRequest and TicketResponse to include new fields